feat: adding middleware to app for pages.
Body:
Applying multer saving the files to local storage
Adding a middleware to certain pages for auth users.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,10 @@
 <%- include('partials/header', {title:title}) %>
 <main>
     <h2>Home page</h2>
+
+    <section>
+
+    </section>  
     <a href="/log-out">Log-out</a>
 </main>
 <%- include('partials/footer') %>
