--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,5 +13,8 @@
       <h1>
         <a href="/" class="header-title">file Uploader</a>
       </h1>
+      <ul>
+        <li><a href="/file/add">+ Add File</a></li>
+      </ul>
     </header>
 
