feat: Adding folders
 - Add folder create
 - Add fetch folder middleware
 - Add folders selection to folders and files.

Need to add file showing on index.
Add folder partial to show the files and child folders for folders.
Add update form for file and folders
file page for data and be able to delete and update.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,12 @@
     <h2>Home page</h2>
 
     <section>
-
+      <h2>Folders:</h2>
+      <ul>
+        <% locals.folders.forEach(folder => { %>
+         <li><a href="/folder/<%= folder.id %>"><%= folder.name %></a></li>
+        <% }) %>
+      </ul>
     </section>  
     <a href="/log-out">Log-out</a>
 </main>
