--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,7 @@
       </h1>
       <ul>
         <li><a href="/file/add">+ Add File</a></li>
+        <li><a href="/folder/add">+ Add Folder</a></li>
       </ul>
     </header>
 
