--- a/views/newFile.ejs
+++ b/views/newFile.ejs
@@ -1,10 +1,17 @@
 <%- include('partials/header', {title:title}) %>
 <main>
+  <div class="form-error"><%- include('partials/form-error') %></div>
+
   <form action="/file/add" method="post" enctype="multipart/form-data">
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" required />
     <label for="file">File</label>
-    <input type="file" id="file" name="file" required />
+    <input type="file" id="file" name="file" required/>
+    <label for="AddFolder">Folder</label>
+    <select name="folder" id="folder">
+      <option value="">None</option>
+      <% locals.folders.forEach(folder => { %>
+       <option value="<%= folder.id %>"><%= folder.name %></option>
+      <% }) %>
+    </select>
     <button type="submit">Add File</button>
   </form>
 </main>
