feat: Add read file and folder
 - Add ability to view file and its data
 - Add ability to view folder and its files and folders
 - The R of CRUD for file and folder.

Need to do:
 - Need to add update form to both file and folder
 - Need to add delete function to both file and folder.
 - Both will be inside the Read EJS file.
 -

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,22 @@
 <%- include('partials/header', {title:title}) %>
-<main>
-    <h2>Home page</h2>
 
-    <section>
-      <h2>Folders:</h2>
-      <ul>
-        <% locals.folders.forEach(folder => { %>
-         <li><a href="/folder/<%= folder.id %>"><%= folder.name %></a></li>
-        <% }) %>
-      </ul>
-    </section>  
-    <a href="/log-out">Log-out</a>
+<main>
+  <h2>Home page</h2>
+
+  <section>
+    <h3>Folders:</h3>
+    <ul>
+      <% locals.folders.forEach(folder => { %>
+      <li><a href="/folder/<%= folder.id %>"><%= folder.name %></a></li>
+      <% }) %>
+    </ul>
+    <h3>All Files:</h3>
+    <ul>
+      <% files.forEach(file => { %>
+      <li><a href="/file/<%= file.id %>"><%= file.name %></a></li>
+      <% }) %>
+    </ul>
+  </section>
 </main>
+
 <%- include('partials/footer') %>
