--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,8 @@
+
 <footer>
     <div class="footer-content">
         <p>&copy; <%= new Date().getFullYear() %> file Uploader. All rights reserved.</p>
+    </div>
 </footer>
-
-
 </body>
-
-</html
+</html>
