--- a/views/newFolder.ejs
+++ b/views/newFolder.ejs
@@ -12,7 +12,7 @@
        <option value="<%= folder.id %>"><%= folder.name %></option>
       <% }) %>
     </select>
-    <button type="submit">Add File</button>
+    <button type="submit">Add Folder</button>
   </form>
 </main>
 <%- include('partials/footer') %>
