feat: Delete file and folder
 - Add delete for file
 - Add delete for folders which deletes all children files and folders
 - Add delete page for confirmation

 next:
 - Add supabase functionality
 - Add styling

--- a/views/file.ejs
+++ b/views/file.ejs
@@ -13,6 +13,7 @@
   <p>Created: <%= file.createdAt.toDateString() %></p>
   <div class="actionButtons">
     <a href="/file/update/<%= file.id %>">Update</a>
+    <a href="/file/delete/<%= file.id %>">Delete</a>
   </div>
   <a href="/home">Back</a>
 </main>
