feat: adding supabase
 - Add Supabase client for file storage
 - Add supabase upload of files to the storage.
 - Add delete of files from Supabase storage.
 - update schema for file path for better file deletion

Next:
 - Add file deleting middleware for handling file deletion when a folder
 is deleted. Need to loop through children folders and keep recurring
    through them to delete all files in the folder.
 - Add all files to one variable then loop through forEach of the files
to delete from supabase.

--- a/views/file.ejs
+++ b/views/file.ejs
@@ -2,7 +2,7 @@
 <main>
   <h2><%= file.name %></h2>
   <!-- turn url into download button -->
-  <p>url: <%= file.url %></p>
+  <a href="<%= file.url %>" download><button>Download</button></a>
   <% if (file.folder) { %>
   <p>
     Folder: <a href="/folder/<%= file.folder.id %>"><%= file.folder.name %></a>
