--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -9,6 +9,9 @@
   <% } %>
   <a href="/home">Cancel</a>
   <form action="/<%= fileOrFolder %>/delete/<%= id %>" method="post">
+    <% if (fileOrFolder==='file') { %>
+    <input type="hidden" name="path" value="<%= path %>" />
+    <% } %>
     <button type="submit">Delete</button>
   </form>
 </main>
