--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,7 @@
         <% if (user) { %>
         <li><a href="/file/add">+ Add File</a></li>
         <li><a href="/folder/add">+ Add Folder</a></li>
+        <li><a href="/profile/<%= user.id %>">Profile</a></li>
         <li><a href="/log-out">Log-out</a></li>
         <% }else{ %>
         <li><a href="/">Log In</a></li>
