--- a/views/newFile.ejs
+++ b/views/newFile.ejs
@@ -5,6 +5,7 @@
   <form action="/file/add" method="post" enctype="multipart/form-data">
     <label for="file">File</label>
     <input type="file" id="file" name="file" required />
+    <p><i>File must be under 2MB</i></p>
     <label for="folder">Folder</label>
     <select name="folder" id="folder">
       <option value="">None</option>
