--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,23 +5,27 @@
 
   <section>
     <h3>Folders:</h3>
-    <ul>
+    <div id="folder-list">
       <% if (locals.folders.length===0) { %>
-      <li>No Folders</li>
+      <p>No Folders</p>
       <% } %>
       <% locals.folders.forEach(folder => { %>
-      <li><a href="/folder/<%= folder.id %>"><%= folder.name %></a></li>
+      <a href="/folder/<%= folder.id %>">
+        <%- include('partials/folderCard', { folder: folder }) %>
+      </a>
       <% }) %>
-    </ul>
+    </div>
     <h3>All Files:</h3>
-    <ul>
+    <div id="file-list">
       <% if (files.length===0) { %>
-      <li>No Files</li>
+      <p>No Files</p>
       <% } %>
       <% files.forEach(file => { %>
-      <li><a href="/file/<%= file.id %>"><%= file.name %></a></li>
+      <a href="/file/<%= file.id %>">
+        <%- include('partials/fileCard', { file: file }) %>
+      </a>
       <% }) %>
-    </ul>
+    </div>
   </section>
 </main>
 
